Fixed some text alignment issues.

--- a/style.css
+++ b/style.css
@@ -14,20 +14,39 @@ body {
 }
 
 .qr-code{
-  width: 100%;
-  height: auto;
+  width: 90%;
+  height: 340px;
     border-radius: 15px;
 }
 
 .container { 
   position: absolute;
-  top: 50px;
-  width:  475px;
-  height: 575px;
+  top: 200px;
+  width:  400px;
+  height: 560px;
   background-color: white;
   border-radius: 15px;
   box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.1);
   font-family: 'Outfit', sans-serif;
   text-align: center;
-  padding: 20px;
+  padding-top: 20px;
+
+}
+
+.title {
+  font-weight: 700;             
+  font-size: 26px;             
+  color: hsl(218, 44%, 22%);    
+  margin-top: 25px;
+  margin-bottom: 15px;
+  padding-left: 50px;           
+  padding-right: 50px;
+}
+
+.description {
+  font-weight: 400;            
+  font-size: 16px;              
+  color: hsl(220, 15%, 55%);    
+  padding-left: 70px;
+  padding-right: 70px;
 }
